examples/invalid/redefine-variable-type.ra
func main(): void {
  a = 1;
  a = "2";
}
